--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=${port:8081}
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
